--- a/package.json
+++ b/package.json
@@ -15,26 +15,29 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "react": "17.0.2",
-    "react-native": "0.65.1",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native": "^0.65.0-rc.4",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-reanimated": "^2.2.2",
+    "react-native-reanimated": "2.3.0-alpha.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "jsc-android": "^250230.2.1",
+    "react-dom": "^16.13.1",
+    "react-native-web": "^0.15.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.14.5",
+    "@babel/runtime": "^7.10.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
+    "babel-jest": "^26.1.0",
+    "eslint": "^7.5.0",
+    "jest": "^26.1.0",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-codegen": "^0.0.7",
-    "react-test-renderer": "17.0.2"
+    "react-test-renderer": "16.13.1"
   },
   "jest": {
     "preset": "react-native"
