created filter slider component

--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "jsc-android": "^250230.2.1",
     "react": "17.0.2",
+    "react-dom": "^16.13.1",
     "react-native": "^0.65.0-rc.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "2.3.0-alpha.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-web": "^0.15.5",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "jsc-android": "^250230.2.1",
-    "react-dom": "^16.13.1",
-    "react-native-web": "^0.15.5"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
