--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-native": "^0.65.0-rc.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "2.3.0-alpha.2",
     "react-native-safe-area-context": "^3.3.2",
