--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@twotalltotems/react-native-otp-input": "^1.3.5",
     "jsc-android": "^250230.2.1",
     "react": "17.0.2",
     "react-dom": "^16.13.1",
