--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "^0.15.5",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
